# learn_opengl

./: CMakeLists.txt  single_triangle.cpp  stb_image.cpp  texture.cpp  triangle_exercise1.cpp
include/glad/: glad.h
include/learnopengl/: shader.h
src/: glad.c
src/1.getting_started/1.3.rectangle/: rectangle.cpp
src/1.getting_started/2.1.shader/: shader.cpp
src/1.getting_started/2.2.shader_class/: 2.2.shader.fs  2.2.shader.vs  shader_class.cpp
src/1.getting_started/3.1.texture/: texture.cpp
